--- a/lights/android.hardware.light@2.0-service.lenovo_zippo.rc
+++ b/lights/android.hardware.light@2.0-service.lenovo_zippo.rc
@@ -2,7 +2,7 @@ on boot
     chown system system /sys/class/backlight/panel0-backlight/brightness
     chown system system /sys/class/backlight/panel0-backlight/max_brightness
 
-service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.lenovo
+service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.lenovo_zippo
     interface android.hardware.light@2.0::ILight default
     class hal
     user system
