--- a/power-libperfmgr/android.hardware.power@1.3-service.lenovo_zippo-libperfmgr.rc
+++ b/power-libperfmgr/android.hardware.power@1.3-service.lenovo_zippo-libperfmgr.rc
@@ -1,4 +1,4 @@
-service vendor.power-hal-1-3 /vendor/bin/hw/android.hardware.power@1.3-service.lenovo-libperfmgr
+service vendor.power-hal-1-3 /vendor/bin/hw/android.hardware.power@1.3-service.lenovo_zippo-libperfmgr
     class hal
     user root
     group system
