--- a/fod/vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.lenovo_zippo.rc
+++ b/fod/vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.lenovo_zippo.rc
@@ -2,7 +2,7 @@ on init
     chown system system /sys/class/backlight/panel0-hbm/brightness
     chmod 0660 /sys/class/backlight/panel0-hbm/brightness
 
-service fingerprint-inscreen-1-0 /system/bin/hw/lineage.biometrics.fingerprint.inscreen@1.0-service.lenovo_zippo
+service fingerprint-inscreen-1-0 /vendor/bin/hw/vendor.lineage.biometrics.fingerprint.inscreen@1.0-service.lenovo_zippo
     interface vendor.lineage.biometrics.fingerprint.inscreen@1.0::IFingerprintInscreen default
     class hal
     user system
